- wxGrid now indicates focus by using different colour for selection
  and hiding cell cursor when it doesn't have focus.
- Added alpha support to wxImage::Paste() (Steven Van Ingelgem)

All (Unix):

- Fixed shared libraries to not depend on GStreamer when built with
  --enable-media; only wxMedia library depends on it now.
- wxLaunchDefaultBrowser() now uses xdg-open if available.

wxMSW:

- Fix rare bug with messages delivered to wrong wxSocket (Tim Kosse).
- Fix setting icons when they have non-default (16*16 and 32*32) sizes.
- Fixed wxLocale::GetInfo to use the C locale.
- Don't enable disabled windows when showing them (Harry McKame).
- Fix assert when using owner-drawn menu items with the newest (Vista) SDK.
- Fixed wxTextCtrl to not process clipboard events twice if there's
  a custom wxEVT_COMMAND_TEXT_* event handler.
- Fix wxComboBox to not lose the current value if it was programmatically set
  to a value not in a list of choices on popup close (Kolya Kosenko)

wxGTK:

- Return false from wxEventLoop::Dispatch() if gtk_main_quit() was called and
  so the loop should exit (Rodolfo Schulz de Lima).
- Fixed wxCURSOR_HAND to map to GDK_HAND2 and not GDK_HAND1, for consistency
  with other applications.

wxMac:

- Fixed cursor for wxBusyCursor and wxContextHelp.


2.8.7
-----

All:

- Fixed bug with default proxy destruction in wxURL (Axel Gembe).

All (GUI):

- wxGraphicsContext implementations now all have the pixel's center at (0.5,0.5),
  avoiding differences in anti-aliasing between platforms.
- wxChoicebook now vertically centres a left-aligned controller.
- Improved borders and size of rich text dialogs.
- Added an optimization to UI updates on idle, by only updating when the
  window is shown.
- Multiple centre panes in wxAUI can now be resized.
- Add support for reading alpha data from TIFF images.

wxMSW:

- Correct (harmless) warnings given for forward-declared DLL-exported classes
  by mingw32 4.2 (Tim Stahlhut).